--- a/part1.html
+++ b/part1.html
@@ -42,12 +42,47 @@ function create() {
 	player.body.gravity.y = 300;
 	player.body.collideWorldBounds = true;
 	player.animations.add('left',[0,1,2,3],10,true);
-	player.animation.add('right'[5,6,7,8],10,true);
+	player.animations.add('right'[5,6,7,8],10,true);
+
+	 stars = game.add.group();
+    stars.enableBody = true;
+    for (var i = 0; i < 12; i++)
+    {
+        var star = stars.create(i * 70, 0, 'star');
+        star.body.gravity.y = 300;
+        star.body.bounce.y = 0.7 + Math.random() * 0.2;
+    }
+
+	cursors = game.input.keyboard.createCursorKeys();
 
 }
 
 function update() {
 	var hitPlatform = game.physics.arcade.collide(player,platforms);
+
+
+	player.body.velocity.x = 0;
+	
+	if(cursors.left.isDown)
+	{
+		player.body.velocity.x = -150;
+		player.animations.play('left');
+	}
+	else if(cursors.right.isDown)
+	{
+		player.body.velocity.x = 150;
+		player.animations.play('right');
+	}
+	else
+	{
+		player.animations.stop();
+		player.frame = 4;
+	}
+
+	if(cursors.up.isDown && player.body.touching.down && hitPlatfrom)
+	{
+		player.body.velocity.y = -350;
+	}
 }
 
 </script>
