--- a/part1.html
+++ b/part1.html
@@ -59,7 +59,9 @@ function create() {
 
 function update() {
 	var hitPlatform = game.physics.arcade.collide(player,platforms);
+	game.physics.arcade.collide(stars, platforms);
 
+	game.physics.arcade.overlap(player, stars, collectStar, null, this);
 
 	player.body.velocity.x = 0;
 	
@@ -83,6 +85,10 @@ function update() {
 	{
 		player.body.velocity.y = -350;
 	}
+}
+
+function collectStar (player, star) {
+    star.kill();
 }
 
 </script>
