--- a/part1.html
+++ b/part1.html
@@ -23,7 +23,16 @@ function preload() {
 	game.load.spritesheet('dude','assets/dude.png',32,48);
 }
 
+var player;
+var platforms;
+var cursors;
+
+var stars;
+var score = 0;
+var scoreText;
+
 function create() {
+
 	game.physics.startSystem(Phaser.Physics.ARCADE);
 	game.add.sprite(0,0,'sky');
 	platforms = game.add.group();
@@ -44,7 +53,7 @@ function create() {
 	player.animations.add('left',[0,1,2,3],10,true);
 	player.animations.add('right'[5,6,7,8],10,true);
 
-	 stars = game.add.group();
+	stars = game.add.group();
     stars.enableBody = true;
     for (var i = 0; i < 12; i++)
     {
@@ -52,6 +61,8 @@ function create() {
         star.body.gravity.y = 300;
         star.body.bounce.y = 0.7 + Math.random() * 0.2;
     }
+
+    scoreText = game.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
 	cursors = game.input.keyboard.createCursorKeys();
 
@@ -89,6 +100,8 @@ function update() {
 
 function collectStar (player, star) {
     star.kill();
+    score += 10;
+    scoreText.text = 'Score: ' + score;
 }
 
 </script>
