--- a/jubeat-1.html
+++ b/jubeat-1.html
@@ -22,7 +22,7 @@ function preload() {
 
     game.load.spritesheet('button', 'assets/number-buttons-90x90.png', 90,90);
     game.load.image('background','assets/starfield.jpg');
-    game.load.audio('In_Motion','assets/In_Motion.mp3');
+    game.load.audio('music1','assets/In_Motion.mp3');
 
 }
 
@@ -37,15 +37,15 @@ function create() {
     game.input.touch.preventDefault = false;
 
     // The numbers given in parameters are the indexes of the frames, in this order: over, out, down
-    button1 = game.add.button(game.world.centerX-100, game.world.centerY+100, 'button', actionOnClick, this, 4, 0, 5);
-    button2 = game.add.button(game.world.centerX, game.world.centerY+100, 'button', actionOnClick, this, 4, 0, 5);
-    button3 = game.add.button(game.world.centerX+100, game.world.centerY+100, 'button', actionOnClick, this, 4, 0, 5);
-    button4 = game.add.button(game.world.centerX-100, game.world.centerY, 'button', actionOnClick, this, 4, 0, 5);
-    button5 = game.add.button(game.world.centerX, game.world.centerY, 'button', actionOnClick, this, 4, 0, 5);
-    button6 = game.add.button(game.world.centerX+100, game.world.centerY, 'button', actionOnClick, this, 4, 0, 5);
-    button7 = game.add.button(game.world.centerX-100, game.world.centerY-100, 'button', actionOnClick, this, 4, 0, 5);
-    button8 = game.add.button(game.world.centerX, game.world.centerY-100, 'button', actionOnClick, this, 4, 0, 5);
-    button9 = game.add.button(game.world.centerX+100, game.world.centerY-100, 'button', actionOnClick, this, 4, 0, 5);
+    button1 = game.add.button(game.world.centerX-100, game.world.centerY+100, 'button', actionOnClick, this, 4, 3, 5);
+    button2 = game.add.button(game.world.centerX, game.world.centerY+100, 'button', actionOnClick, this, 4, 3, 5);
+    button3 = game.add.button(game.world.centerX+100, game.world.centerY+100, 'button', actionOnClick, this, 4, 3, 5);
+    button4 = game.add.button(game.world.centerX-100, game.world.centerY, 'button', actionOnClick, this, 4, 3, 5);
+    button5 = game.add.button(game.world.centerX, game.world.centerY, 'button', actionOnClick, this, 4, 3, 5);
+    button6 = game.add.button(game.world.centerX+100, game.world.centerY, 'button', actionOnClick, this, 4, 3, 5);
+    button7 = game.add.button(game.world.centerX-100, game.world.centerY-100, 'button', actionOnClick, this, 4, 3, 5);
+    button8 = game.add.button(game.world.centerX, game.world.centerY-100, 'button', actionOnClick, this, 4, 3, 5);
+    button9 = game.add.button(game.world.centerX+100, game.world.centerY-100, 'button', actionOnClick, this, 4, 3, 5);
 
 
     //  setting the anchor to the center
@@ -59,7 +59,7 @@ function create() {
     button8.anchor.setTo(0.5, 0.5);
     button9.anchor.setTo(0.5, 0.5);
 
-    music = game.add.audio('In_Motion');
+    music = game.add.audio('music1');
     music.play();
 
 
@@ -69,14 +69,14 @@ function create() {
 function actionOnClick() {
     
     //  Manually changing the frames of the button, i.e, how it will look when you play with it
-    button1.setFrames(4, 0, 5);
-    button2.setFrames(4, 0, 5);
-    button3.setFrames(4, 0, 5);
-    button4.setFrames(4, 0, 5);
-    button5.setFrames(4, 0, 5);
-    button6.setFrames(4, 0, 5);
-    button7.setFrames(4, 0, 5);
-    button8.setFrames(4, 0, 5);
-    button9.setFrames(4, 0, 5);
+    button1.setFrames(4, 3, 5);
+    button2.setFrames(4, 3, 5);
+    button3.setFrames(4, 3, 5);
+    button4.setFrames(4, 3, 5);
+    button5.setFrames(4, 3, 5);
+    button6.setFrames(4, 3, 5);
+    button7.setFrames(4, 3, 5);
+    button8.setFrames(4, 3, 5);
+    button9.setFrames(4, 3, 5);
 
 }
