--- a/jubeat-1.html
+++ b/jubeat-1.html
@@ -3,8 +3,7 @@
 <head> 
     <meta charset="UTF-8" />
     <title>My Game</title>
-    <script type="text/javascript" src="js/phaser.min.js"></script>
-    <style type="text/css">
+    <script type="text/javascript" src="js/phaser.min.js"></script>    <style type="text/css">
         body {
             margin: 0;
         }
@@ -15,14 +14,14 @@
 <script type="text/javascript">
 
 
-
-var game = new Phaser.Game(800, 600, Phaser.AUTO, 'phaser-example', { preload: preload, create: create });
+var game = new Phaser.Game(800, 600, Phaser.AUTO, 'phaser-example', { preload: preload, create: create});
 
 function preload() {
 
     game.load.spritesheet('button', 'assets/number-buttons-90x90.png', 90,90);
     game.load.image('background','assets/starfield.jpg');
     game.load.audio('music1','assets/In_Motion.mp3');
+    game.load.image('logo', 'assets/phaser2.png');
 
 }
 
@@ -33,8 +32,14 @@ var background;
 function create() {
 
     //  Setting the background colour
+    game.add.tileSprite(0, 0, 800, 600, 'background');
     game.stage.backgroundColor = '#182d3b';
-    game.input.touch.preventDefault = false;
+    //game.input.touch.preventDefault = false;
+
+    game.input.addPointer();
+    game.input.addPointer();
+    game.input.addPointer();
+    game.input.addPointer();
 
     // The numbers given in parameters are the indexes of the frames, in this order: over, out, down
     button1 = game.add.button(game.world.centerX-100, game.world.centerY+100, 'button', actionOnClick, this, 4, 3, 5);
@@ -62,9 +67,15 @@ function create() {
     music = game.add.audio('music1');
     music.play();
 
+    var sprite = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
+    sprite.scale.x = 0.27; 
+    sprite.scale.y = 0.27; 
+    sprite.anchor.setTo(0.5, 0.5);
+    sprite.alpha = 0;
 
-
+    game.add.tween(sprite).to( { alpha: 1 }, 500, Phaser.Easing.Linear.None, true, 0, 500, true);
 }
+
 
 function actionOnClick() {
     
@@ -80,3 +91,4 @@ function actionOnClick() {
     button9.setFrames(4, 3, 5);
 
 }
+
